# OOP-LW1

./: CMakeLists.txt  LICENSE  README.md  check.cpp  check.hpp  main.cpp  tests.cpp
